Fixed responsiveness on tablet. Mobile and sm-mobile portrait only.

--- a/src/css/atoms/logo.less
+++ b/src/css/atoms/logo.less
@@ -1,3 +1,10 @@
 .logo {
     width: 18rem;
+
+    #media-screen > .mobile-and-smaller({
+        width: 15rem;
+    });
+    #media-screen > .sm-mobile-only({
+        width: 13rem;
+    });
 }
