--- a/src/css/components/topic-list.less
+++ b/src/css/components/topic-list.less
@@ -31,11 +31,22 @@
         margin-right: 1.2rem;
     }
 
-    #media-screen > .tablet-and-smaller({
+    #media-screen > .sm-desktop-and-smaller({
         justify-content: center;
         max-width: 38rem;
     });
     #media-screen > .mobile-and-smaller({
         max-width: 18rem;
+    });
+    #media-screen > .sm-mobile-only({
+        .topic-item {
+            .size(13rem, 3.2rem);
+            font-size: 1.4rem;
+            padding: 0 1.6rem;
+            margin: 0 0 .8rem;
+        }
+        .material-icons {
+            margin-right: 1rem;
+        }
     });
 }
