--- a/src/css/main.less
+++ b/src/css/main.less
@@ -9,7 +9,7 @@
 @import 'utils/media-queries';
 @import 'utils/generators';
 // @import 'utils/shadows';
-@import 'utils/device-label';
+// @import 'utils/device-label';
 
 @import 'layouts/global';
 @import 'layouts/main-container';
@@ -52,8 +52,8 @@
 @md-desktop-max-width: 1439px;
 @md-desktop-min-width: 1280px;
 @sm-desktop-max-width: 1279px;
-@sm-desktop-min-width: 1024px;
-@tablet-max-width: 1023px;
+@sm-desktop-min-width: 1025px;
+@tablet-max-width: 1024px;
 @tablet-min-width: 601px;
 @mobile-max-width: 600px;
 @mobile-min-width: 421px;
