--- a/src/css/utils/animations.less
+++ b/src/css/utils/animations.less
@@ -1,4 +1,4 @@
-@keyframes green-stripe-animation {
+@keyframes green-stripe-animation-desktop {
     0% {
         transform: translate(12rem, 12rem) rotate(-60deg) translateX(0);
     }
@@ -18,7 +18,7 @@
         transform: translate(12rem, 12rem) rotate(-60deg) translateX(0);
     }
 }
-@keyframes teal-stripe-animation {
+@keyframes teal-stripe-animation-desktop {
     0% {
         transform: translate(-4rem, 80rem) rotate(-60deg) translateX(0);
     }
@@ -38,7 +38,7 @@
         transform: translate(-4rem, 80rem) rotate(-60deg) translateX(0);
     }
 }
-@keyframes red-stripe-animation {
+@keyframes red-stripe-animation-desktop {
     0% {
         transform: translate(4rem, -80rem) rotate(-60deg) translateX(0);
     }
@@ -58,7 +58,7 @@
         transform: translate(4rem, -80rem) rotate(-60deg) translateX(0);
     }
 }
-@keyframes rainbow-stripe-animation {
+@keyframes rainbow-stripe-animation-desktop {
     0% {
         transform: translate(-12rem, -12rem) rotate(-60deg) translateX(0);
     }
@@ -76,5 +76,167 @@
     }
     100% {
         transform: translate(-12rem, -12rem) rotate(-60deg) translateX(0);
+    }
+}
+
+@keyframes green-stripe-animation-tablet {
+    0% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(100%);
+    }
+    33.01% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(-100%);
+    }
+    66% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(100%);
+    }
+    66.01% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(-100%);
+    }
+    100% {
+        transform: translate(4rem, 4rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes teal-stripe-animation-tablet {
+    0% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(150%);
+    }
+    33.01% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(-150%);
+    }
+    66% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(150%);
+    }
+    66.01% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(-150%);
+    }
+    100% {
+        transform: translate(-12rem, 70rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes red-stripe-animation-tablet {
+    0% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(-150%);
+    }
+    33.01% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(150%);
+    }
+    66% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(-150%);
+    }
+    66.01% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(150%);
+    }
+    100% {
+        transform: translate(12rem, -70rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes rainbow-stripe-animation-tablet {
+    0% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(-100%);
+    }
+    33.01% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(100%);
+    }
+    66% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(-100%);
+    }
+    66.01% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(100%);
+    }
+    100% {
+        transform: translate(-4rem, -4rem) rotate(-60deg) translateX(0);
+    }
+}
+
+@keyframes green-stripe-animation-mobile {
+    0% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(100%);
+    }
+    33.01% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(-100%);
+    }
+    66% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(100%);
+    }
+    66.01% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(-100%);
+    }
+    100% {
+        transform: scale(.4) translate(4rem, 4rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes teal-stripe-animation-mobile {
+    0% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(150%);
+    }
+    33.01% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(-150%);
+    }
+    66% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(150%);
+    }
+    66.01% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(-150%);
+    }
+    100% {
+        transform: scale(.4) translate(-16rem, 74rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes red-stripe-animation-mobile {
+    0% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(-150%);
+    }
+    33.01% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(150%);
+    }
+    66% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(-150%);
+    }
+    66.01% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(150%);
+    }
+    100% {
+        transform: scale(.4) translate(16rem, -74rem) rotate(-60deg) translateX(0);
+    }
+}
+@keyframes rainbow-stripe-animation-mobile {
+    0% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(0);
+    }
+    33% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(-100%);
+    }
+    33.01% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(100%);
+    }
+    66% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(-100%);
+    }
+    66.01% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(100%);
+    }
+    100% {
+        transform: scale(.4) translate(-4rem, -4rem) rotate(-60deg) translateX(0);
     }
 }
